--- a/paper/body.tex
+++ b/paper/body.tex
@@ -196,13 +196,13 @@ file \texttt{tutorial.py} at~\cite{git-improvement}.
 One may run~it after installing a~few \texttt{Python} modules. Alternatively, one may run the Jupyter notebook
 \texttt{tutorial.ipynb} in~the cloud (without installing
 anything) by pressing the badge ``Colab''
-at~\cite{git-improvement}.
+at~the repository page~\cite{git-improvement}.
 
 \subsection{Manipulating Circuits}
 This is done through the \mintinline{python}{Circuit}
 class. One can load and save circuits as~well~as
 print and draw them. A~nicely looking layout of
-a~circuit is produced by the \texttt{pygraphviz} module \cite{pygraphviz}. The program also contains some built-in
+a~circuit is produced by the \texttt{pygraphviz} module~\cite{pygraphviz}. The program also contains some built-in
 circuits that can be used as~building blocks.
 The following sample code constructs a~circuit
 for $\SUM_5$ out of two full adders and
