--- a/paper/main_lipics.tex
+++ b/paper/main_lipics.tex
@@ -1,5 +1,5 @@
-\documentclass[a4paper,USenglish,cleveref, autoref, thm-restate,anonymous]{lipics-v2021}
-%This is a template for producing LIPIcs articles. 
+\documentclass[a4paper, USenglish, cleveref, autoref, thm-restate]{lipics-v2021}
+%This is a template for producing LIPIcs articles.
 %See lipics-v2021-authors-guidelines.pdf for further information.
 %for A4 paper format use option "a4paper", for US-letter use option "letterpaper"
 %for british hyphenation rules use option "UKenglish", for american hyphenation rules use option "USenglish"
@@ -27,14 +27,14 @@
 
 \Copyright{Alexander~S. Kulikov and Nikita Slezkin} %TODO mandatory, please use full first names. LIPIcs license is "CC-BY";  http://creativecommons.org/licenses/by/3.0/
 
-\ccsdesc[500]{Theory of computation~Circuit complexity} %TODO mandatory: Please choose ACM 2012 classifications from https://dl.acm.org/ccs/ccs_flat.cfm 
+\ccsdesc[500]{Theory of computation~Circuit complexity} %TODO mandatory: Please choose ACM 2012 classifications from https://dl.acm.org/ccs/ccs_flat.cfm
 
 \keywords{circuits, algorithms, complexity theory, SAT, SAT-solvers, heuristics} %TODO mandatory; please add comma-separated list of keywords
 
 %\category{} %optional, e.g. invited paper
 
 \relatedversion{} %optional, e.g. full version hosted on arXiv, HAL, or other respository/website
-\relatedversiondetails[linktext={ECCC TR21-044}, cite=DBLP:journals/eccc/KulikovS21]{Technical report}{https://eccc.weizmann.ac.il/report/2021/044/} %linktext and cite are optional
+\relatedversiondetails[linktext={ECCC TR21-044}, cite={DBLP:journals/eccc/KulikovS21}]{Technical report}{https://eccc.weizmann.ac.il/report/2021/044/} %linktext and cite are optional
 
 %\supplement{}%optional, e.g. related research data, source code, ... hosted on a repository like zenodo, figshare, GitHub, ...
 %\supplementdetails[linktext={opt. text shown instead of the URL}, cite=DBLP:books/mk/GrayR93, subcategory={Description, Subcategory}, swhid={Software Heritage Identifier}]{General Classification (e.g. Software, Dataset, Model, ...)}{URL to related version} %linktext, cite, and subcategory are optional
@@ -48,9 +48,9 @@
 
 %\acknowledgements{I want to thank \dots}%optional
 
-%\nolinenumbers %uncomment to disable line numbering
+\nolinenumbers %uncomment to disable line numbering
 
-%\hideLIPIcs  %uncomment to remove references to LIPIcs series (logo, DOI, ...), e.g. when preparing a pre-final version to be uploaded to arXiv or another public repository
+\hideLIPIcs  %uncomment to remove references to LIPIcs series (logo, DOI, ...), e.g. when preparing a pre-final version to be uploaded to arXiv or another public repository
 
 %Editor-only macros:: begin (do not touch as author)%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \EventEditors{John Q. Open and Joan R. Access}
