Prepare submission for arXiv

--- a/paper/defs.tex
+++ b/paper/defs.tex
@@ -22,7 +22,7 @@
 \usepackage{booktabs}
 
 %%%%% LISTINGS
-\usepackage{minted}
+\usepackage{minted} % play with flags [frozencache,cachedir=.] when submitting to arXiv
 \setminted{bgcolor=gray!10}
 
 
