--- a/paper/circuits.bib
+++ b/paper/circuits.bib
@@ -1,3 +1,14 @@
+@book{DBLP:books/teu/Wegener87,
+    author    = {Ingo Wegener},
+    title     = {The complexity of Boolean functions},
+    publisher = {Wiley-Teubner},
+    year      = {1987},
+    url       = {http://ls2-www.cs.uni-dortmund.de/monographs/bluebook/},
+    timestamp = {Mon, 02 Jun 2003 14:35:17 +0200},
+    biburl    = {https://dblp.org/rec/books/teu/Wegener87.bib},
+    bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{DBLP:journals/eccc/KulikovS21,
   author    = {Alexander S. Kulikov and
                Nikita Slezkin},
