--- a/paper/main.tex
+++ b/paper/main.tex
@@ -21,9 +21,11 @@
 
 \author{Alexander~S. Kulikov}{Steklov Mathematical Institute at St.~Petersburg, Russian Academy of Sciences \and St.~Petersburg State University \and \url{https://logic.pdmi.ras.ru/~kulikov/}}{kulikov@logic.pdmi.ras.ru}{https://orcid.org/0000-0002-5656-0336}{Supported by Russian Science Foundation (18-71-10042).}
 
+\author{Danila Pechenev}{St.~Petersburg State University}{danil-pechenev@mail.ru }{}{}
+
 \author{Nikita Slezkin}{St.~Petersburg State University}{ne.slezkin@gmail.com}{https://orcid.org/0000-0003-1904-9261}{}
 
-\authorrunning{A.\,S. Kulikov and N. Slezkin} %TODO mandatory. First: Use abbreviated first/middle names. Second (only in severe cases): Use first author plus 'et al.'
+\authorrunning{A.\,S.~Kulikov, D.~Pechenev, N.~Slezkin} %TODO mandatory. First: Use abbreviated first/middle names. Second (only in severe cases): Use first author plus 'et al.'
 
 \Copyright{Alexander~S. Kulikov and Nikita Slezkin} %TODO mandatory, please use full first names. LIPIcs license is "CC-BY";  http://creativecommons.org/licenses/by/3.0/
 
@@ -69,5 +71,8 @@
 \input defs
 
 \begin{document}
-\input body
+    \listoftodos
+    \tableofcontents
+
+    \input body
 \end{document}
