--- a/paper/body.tex
+++ b/paper/body.tex
@@ -197,9 +197,9 @@ for which the approach described above leads to improved upper bounds.
     for $\SUM_n$. In~turn, an~efficient circuit for $\SUM_5$ can be~found
     in a~few seconds if~one starts from a~standard circuit for $\SUM_5$ composed
     out of~two full adders and one half adder.
-    \item We~get new upper bounds for the threshold function defined as~follows:
+    \item We~design new circuits for the threshold function defined as~follows:
     \[\THR_n^k(x_1, \dotsc, x_n)=[x_1+\dotsb+x_n \ge k] \, .\]
-    The best known circuits for $\THR$ are the following:
+    The best known upper bounds for $\THR$ are the following:
     \begin{align*}
         \size(\THR_n^k) &\le kn+o(n) \text{ for $2 \le k \le 4$~\cite{Dunne84} (see also~\cite[Theorem~2.3]{DBLP:books/teu/Wegener87}),}\\
         \size(\THR_n^k) &\le 4.5n+o(n) \text{ for $5 \le k$~\cite{DBLP:journals/ipl/DemenkovKKY10}.}
