--- a/paper/circuits.bib
+++ b/paper/circuits.bib
@@ -1,3 +1,25 @@
+@inproceedings{DBLP:conf/sat/IgnatievMM18,
+    author    = {Alexey Ignatiev and
+    Ant{\'{o}}nio Morgado and
+    Jo{\~{a}}o Marques{-}Silva},
+    editor    = {Olaf Beyersdorff and
+    Christoph M. Wintersteiger},
+    title     = {{PySAT}: {A} {Python} Toolkit for Prototyping with {SAT} Oracles},
+    booktitle = {Theory and Applications of Satisfiability Testing - {SAT} 2018 - 21st
+    International Conference, {SAT} 2018, Held as Part of the Federated
+    Logic Conference, FloC 2018, Oxford, UK, July 9-12, 2018, Proceedings},
+    series    = {Lecture Notes in Computer Science},
+    volume    = {10929},
+    pages     = {428--437},
+    publisher = {Springer},
+    year      = {2018},
+    url       = {https://doi.org/10.1007/978-3-319-94144-8\_26},
+    doi       = {10.1007/978-3-319-94144-8\_26},
+    timestamp = {Mon, 24 Feb 2020 19:23:28 +0100},
+    biburl    = {https://dblp.org/rec/conf/sat/IgnatievMM18.bib},
+    bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @book{DBLP:books/teu/Wegener87,
     author    = {Ingo Wegener},
     title     = {The complexity of Boolean functions},
