--- a/paper/main.tex
+++ b/paper/main.tex
@@ -71,8 +71,8 @@
 \input defs
 
 \begin{document}
-    \listoftodos
-    \tableofcontents
+%    \listoftodos
+%    \tableofcontents
 
     \input body
 \end{document}
