--- a/paper/defs.tex
+++ b/paper/defs.tex
@@ -30,6 +30,7 @@
 \DeclareMathOperator{\SUM}{SUM}
 \DeclareMathOperator{\MOD}{MOD}
 \DeclareMathOperator{\THR}{THR}
+\DeclareMathOperator{\MTHR}{MTHR}
 \DeclareMathOperator{\size}{size}
 \DeclareMathOperator{\gates}{gates}
 \DeclareMathOperator{\IN}{IN}
