--- a/paper/body.tex
+++ b/paper/body.tex
@@ -205,9 +205,9 @@ for which the approach described above leads to improved upper bounds.
     We~get the following improvement:
     \begin{align*}
         %\size(\THR_n^4) &\le 3.5n+o(n),\\
-        \size(\THR_n^k) &\le (4.5-2^{2-\lceil\log_2k\rceil})n+o(n) \text{ for $4 \le k = O(1)$}
+        \size(\THR_n^k) &\le (4.5-2^{2-\lceil\log_2k\rceil})n+o(n) \text{ for $4 \le k = O(1)$.}
     \end{align*}
-    (in~particular, $\size(\THR_n^4) \le 3.5n+o(n)$).
+    In~particular, $\size(\THR_n^4) \le 3.5n+o(n)$ and $\size(\THR_n^k) \le 4n+o(n)$ for $5 \le k \le 8$.
 \end{itemize}
 The improved upper bounds are obtained in a~semiautomatic fashion:
 \begin{enumerate}
